force-app/main/default/objects/KLA_CustomServiceFields__c/KLA_CustomServiceFields__c.object-meta.xml
<CustomObject>
    <label>KLA_CustomServiceFields</label>
    <nameField>
        <label>KLA_CustomServiceFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KLA_CustomServiceFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>