force-app/main/default/objects/KLA_CustomServiceFields__c/fields/lastSuccessfulRun__c.field-meta.xml
<CustomField>
    <fullName>lastSuccessfulRun__c</fullName>
    <label>lastSuccessfulRun</label>
    <type>DateTime</type>
</CustomField>