force-app/main/default/objects/KLA_CustomServiceFields__c/fields/maxResults__c.field-meta.xml
<CustomField>
    <fullName>maxResults__c</fullName>
    <defaultValue>25</defaultValue>
    <label>maxResults</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>