force-app/main/default/objects/KLA_CustomServiceFields__c/fields/OrderResponseStageStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderResponseStageStatus__c</fullName>
    <label>OrderResponseStageStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>