force-app/main/default/objects/KLA_CustomServiceFields__c/fields/serviceName__c.field-meta.xml
<CustomField>
    <fullName>serviceName__c</fullName>
    <label>serviceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>